--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,142 @@
+/* Reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Generics */
 body {
-    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f6f8f9;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    margin: 20px 0;
+}
+
+h1 {
+    display: inline;
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+
+/* Utils */
+.container {
+    background-color: #fff;
+    max-width: 900px;
+    margin: 1px auto;
+    padding: 10px 30px;
+}
+
+.check {
+    color: #09c409;
+    border: 1px solid currentColor;
+    font-size: 12px;
+    margin-right: 5px;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    line-height: 15px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.cross {
+    color: #ff0000;
+    border: 1px solid currentColor;
+    font-size: 12px;
+    margin-right: 5px;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    line-height: 15px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.badge-blue {
+    background-color: #45abea;
+    border-color: #45abea;
+}
+
+.badge-purple {
+    background-color: #9c72e4;
+    border-color: #9c72e4;
+}
+
+.badge-green {
+    background-color: #64c0a9;
+    border-color: #64c0a9;
+}
+
+.badge-orange {
+    background-color: #f29e33;
+    border-color: #f29e33;
+}
+
+.badge-pink {
+    background-color: #d863a1;
+    border-color: #d863a1;
+}
+
+.badge-lime {
+    background-color: #b0c926;
+    border-color: #b0c926;
+}
+
+.badges {
+    margin-left: 10px;
+    font-size: 0.7rem;
+    padding: 5px 7px;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 2px;
+    color: #fff;
+}
+
+/* Header */
+header {
+    background-color: #fff;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+/* Main */
+button {
+    padding: 5px 10px;
+    border-radius: 5px 5px;
+    border-style: solid;
+    border-width: 2px;
+    cursor: pointer;
+}
+
+.btn-blue {
+    color: #fff;
+    background-color: #1e90ff;
+    border-color: #1e90ff;
+}
+
+.btn-white {
+    color: #808080;
+    background-color: #fff;
+    border-color: currentColor;
+}
+
+.list {
+    background-color: #fff;
+}
+
+h2 {
+    display: inline;
+    font-size: 1.2rem;
+    margin: 20px 0;
 }
