--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 /* Generics */
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #f6f8f9;
 }
 
@@ -93,7 +93,7 @@ h1 {
 
 .badges {
     margin-left: 10px;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     padding: 5px 7px;
     border-radius: 20px;
     border-style: solid;
